@@ -23,5 +23,7 @@ package org.apache.hadoop.hbase.shell;
  * Parser uses command factories to create command.
  */
 public interface CommandFactory {
+  
   Command getCommand();
+  
 }
